--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ console.log(height);
 var svg = d3.select("body").append("svg").attr("width",width).attr("height", height/5.5).attr("id","StaticInfo");
 			d3.select("#StaticInfo").append("rect")
 			.attr("x",5).attr("y",0)
-			.attr("width", width-10)
+			.attr("width", width-5)
 			.attr("height", height/5.5 -15)
 			.attr("stroke","white" )
 			.attr("stroke-width",4)
@@ -393,7 +393,7 @@ var svg = d3.select("body").append("svg").attr("width",width).attr("height", '6%
 var svg = d3.select("body").append("svg").attr("width",width).attr("height", height/4.8).attr("id","StaticInfoMeds");
 		d3.select("#StaticInfoMeds").append("rect")
 			.attr("x",5).attr("y",2)
-			.attr("width", width-10)
+			.attr("width", width-5)
 			.attr("height", height/5.5)
 			.attr("stroke","#a7a7a7" )
 			.attr("fill","#565555")
@@ -419,7 +419,7 @@ var recttabs = d3.select("#MedsTabs").selectAll("rect").data(medsdata).enter().a
 
 d3.select("#StaticInfoMeds").append("rect")
 					.attr("x",5).attr("y",0)
-					.attr("width", width-10)
+					.attr("width", width-5)
 					.attr("height", height/5.5 -15)
 					.attr("stroke","#a7a7a7" )
 					.attr("fill","#300e03")
@@ -483,7 +483,7 @@ d3.select("body").append("svg").attr("id","firstgraph").attr("width",width/1.15)
 
 
 var svgfirstline = d3.select("#firstgraph"),
-    margin1 = {top: 10, right: 5, bottom: 950, left: 40},
+    margin1 = {top: 10, right: 0, bottom: 950, left: 40},
     widthfirstline = +svgfirstline.attr("width") - margin1.left - margin1.right,
     heightfirstline = +svgfirstline.attr("height") - margin1.top - margin1.bottom,
     firstg = svgfirstline.append("g").attr("transform", "translate(" + margin1.left + "," + margin1.top + ")");
@@ -717,7 +717,7 @@ function mouseout() {
 
 
 var svgsecondline = d3.select("#firstgraph"),
-    margin2 = {top: 180, right: 5, bottom: 745, left: 40},
+    margin2 = {top: 180, right: 0, bottom: 745, left: 40},
     widthsecondline = +svgsecondline.attr("width") - margin2.left - margin2.right,
     heightsecondline = +svgsecondline.attr("height") - margin2.top - margin2.bottom,
     secondg = svgsecondline.append("g").attr("transform", "translate(" + margin2.left + "," + margin2.top + ")");
@@ -943,7 +943,7 @@ function mouseout() {
 
 
 var svgthirdline = d3.select("#firstgraph"),
-    margin3 = {top: 390, right: 5, bottom: 540, left: 40},
+    margin3 = {top: 390, right: 0, bottom: 540, left: 40},
     widththirdline = +svgthirdline.attr("width") - margin3.left - margin3.right,
     heightthirdline = +svgthirdline.attr("height") - margin3.top - margin3.bottom,
     thirdgraphg = svgthirdline.append("g").attr("transform", "translate(" + margin3.left + "," + margin3.top + ")");
@@ -1155,7 +1155,7 @@ function mouseout() {
     });
 
 var svgfourthline = d3.select("#firstgraph"),
-    margin4 = {top: 600, right: 5, bottom: 320, left: 40},
+    margin4 = {top: 600, right: 0, bottom: 320, left: 40},
     widthfourthline = +svgfourthline.attr("width") - margin4.left - margin4.right,
     heightfourthline = +svgfourthline.attr("height") - margin4.top - margin4.bottom,
     marginbrush = {top: 820, right: 50, bottom: 270, left: 50},
@@ -1543,7 +1543,7 @@ d3.select("body").append("svg").attr("id","currentreadings").attr("width",width/
 
 var medsboxes = d3.select("#currentreadings").append("rect")
 					.attr("width", width/8)
-					.attr("height",height/11)
+					.attr("height",'5.5%')
 					.attr("x", 0)
 					.attr("y", 90)
 					.attr("stroke", "#3D3737")
@@ -1591,7 +1591,7 @@ function getRandomInt(min, max){
 }
 var medsboxes = d3.select("#currentreadings").append("rect")
 					.attr("width", width/8)
-					.attr("height",height/11)
+					.attr("height",'5.5%')
 					.attr("x", 0)
 					.attr("y", 290)
 					.attr("stroke", "#3D3737")
@@ -1637,7 +1637,7 @@ var inter = setInterval(function() {
 }
 var medsboxes = d3.select("#currentreadings").append("rect")
 					.attr("width", width/8)
-					.attr("height",height/11)
+					.attr("height",'5.5%')
 					.attr("x", 0)
 					.attr("y", 500)
 					.attr("stroke", "#3D3737")
@@ -1682,7 +1682,7 @@ var inter = setInterval(function() {
 
 var medsboxes = d3.select("#currentreadings").append("rect")
 					.attr("width", width/8)
-					.attr("height",height/11)
+					.attr("height",'5.5%')
 					.attr("x", 0)
 					.attr("y", 710)
 					.attr("stroke", "#3D3737")
@@ -1758,7 +1758,7 @@ d3.select("#currentreadings").append("text")
     </ul>
 </nav>
 </div>
-<div style="height: 20px; background-color: #8A8C8C; border:3px solid #B4B1B2"></div>
+<div style="height: 20px; background-color: #8A8C8C; border:3px solid #B4B1B2; margin-left: -10px; width:101%"></div>
   <div class="row">
 	<nav class="menu">
     <ul>
