--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ circle.active {
 }
 
 .area {
-        fill: #215F65;
+        fill: none;
 		opacity: 0.6;
         clip-path: url(#clip);
        	border-style: solid;
